JSON semantics